Align article navigation correctly.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -395,9 +395,16 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-basis: 30%;
     width: 100%;
 }
+
+.art-nav * {
+    flex-basis: 30%;
+}
+
+.art-nav *:nth-child(1) { text-align: left; }
+.art-nav *:nth-child(2) { text-align: center; }
+.art-nav *:nth-child(3) { text-align: right; }
 
 @media (--max-md) {
     .main.artlist {
